@@ -3,9 +3,8 @@ import javafx.application.Application;
 
 
 public abstract class ExecuteGUI extends Application {
-
-
-    //TODO use only one stage in gui to get all pts for vollständigkeit!!!!!!!!!!!!!!!!!!!!!!!!!
+    // if runtim components are missing, add vm options -> --module-path "C:\Users\skan\IntelliJ IDEA Community Edition 2021.2.2\java\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
+   //  Path: your javafx lib path in your Machine
     public static void main(String[] args) {
         Application.launch(GUI.class, args);
     }
